// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalInfoCard Should render loading state 1`] = `
.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.75rem;
}

.c6 {
  color: #A1A6B0;
}

.c7 {
  cursor: pointer;
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  border: 1px solid #A1A6B0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7:hover {
  border-color: #fff;
}

.c1 {
  border: 1px solid #303338;
  border-radius: 10px;
  margin-bottom: 1rem;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
}

.c2 {
  border-bottom: 1px solid #303338;
  padding: 8px 16px;
}

.c3 {
  font-family: Inter;
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
  color: #fff;
  margin: 0;
}

.c4 {
  padding: 1rem;
  color: #fff;
}

<div>
   
  <div
    class="c0 c1"
  >
    <div
      class="c0 c2"
    >
      <div
        class="c3"
      >
        information
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c0 c4"
      >
        <div
          class="c0 c5"
        >
          <span>
            proposalInfoCard.consensusSystem
          </span>
          <span
            class="c6"
          >
            guilds.guild
          </span>
        </div>
        <div
          class="c0 c5"
        >
          <span>
            proposalInfoCard.proposalDuration
          </span>
          <span
            class="c6"
          >
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 50px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
        </div>
        <div
          class="c0 c5"
        >
          <span>
            quorum
          </span>
          <span
            class="c6"
          >
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 50px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
        </div>
        <div
          class="c0 c5"
        >
          <span>
            proposalInfoCard.proposalHistory
          </span>
          <span
            class="c7"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`ProposalInfoCard Should render will full parameters 1`] = `
.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.75rem;
}

.c6 {
  color: #A1A6B0;
}

.c7 {
  cursor: pointer;
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  border: 1px solid #A1A6B0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7:hover {
  border-color: #fff;
}

.c1 {
  border: 1px solid #303338;
  border-radius: 10px;
  margin-bottom: 1rem;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
}

.c2 {
  border-bottom: 1px solid #303338;
  padding: 8px 16px;
}

.c3 {
  font-family: Inter;
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
  color: #fff;
  margin: 0;
}

.c4 {
  padding: 1rem;
  color: #fff;
}

<div>
   
  <div
    class="c0 c1"
  >
    <div
      class="c0 c2"
    >
      <div
        class="c3"
      >
        information
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c0 c4"
      >
        <div
          class="c0 c5"
        >
          <span>
            proposalInfoCard.consensusSystem
          </span>
          <span
            class="c6"
          >
            guilds.guild
          </span>
        </div>
        <div
          class="c0 c5"
        >
          <span>
            proposalInfoCard.proposalDuration
          </span>
          <span
            class="c6"
          >
            3 minutes
          </span>
        </div>
        <div
          class="c0 c5"
        >
          <span>
            quorum
          </span>
          <span
            class="c6"
          >
            0.3%%
          </span>
        </div>
        <div
          class="c0 c5"
        >
          <span>
            proposalInfoCard.proposalHistory
          </span>
          <span
            class="c7"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;
